--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -16,7 +16,7 @@
     }
 
     &__logo-container {
-        margin-right: 3rem;
+        margin-right: 2rem;
     }
 
     &__logo {
@@ -52,13 +52,42 @@
         &--icon {
             border-radius: 100%;
             display: block;
+            position: relative;
             padding: 1rem;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: rgba($col-primary, 0.1);
+                border-radius: 100%;
+
+                width: 1rem;
+                height: 1rem;
+                opacity: 0;
+
+                transition: 0.2s ease;
+            }
 
             svg {
                 display: block;
-                width: 1.8rem;
+                width: 1.6rem;
 
                 fill: currentColor;
+            }
+
+            &:hover {
+                &::after {
+                    width: 3.5rem;
+                    height: 3.5rem;
+                    opacity: 1;
+                }
+
+                svg {
+                    color: $col-primary;
+                }
             }
         }
 
@@ -73,7 +102,7 @@
             }
         }
 
-        &:not(&--fill):hover {
+        &:not(&--fill):not(&--icon):hover {
             color: $col-primary;
             background-color: rgba($col-primary, 0.1);
         }
