added fallback font

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,15 +2,15 @@
 
 @font-face {
     font-family: 'Circular';
-    src: url('/fonts/CircularStd-Book.ttf');
+    src: url('/fonts/CircularStd-Book.ttf'), format('truetype');
 }
 @font-face {
     font-family: 'CircularBold';
-    src: url('/fonts/CircularStd-Bold.ttf');
+    src: url('/fonts/CircularStd-Bold.ttf'), format('truetype');
 }
 @font-face {
     font-family: 'CircularBlack';
-    src: url('/fonts/CircularStd-Black.ttf');
+    src: url('/fonts/CircularStd-Black.ttf'), format('truetype');
 }
 
 html {
@@ -33,7 +33,7 @@ body {
     color: $col-dark-1;
 
     font-size: 1.6rem;
-    font-family: 'Circular';
+    font-family: 'Circular', sans-serif;
 
     margin: 0;
 }
