added jumbo info boxes, animation

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -37,3 +37,11 @@ body {
 
     margin: 0;
 }
+
+.main {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-gap: $gutter;
+
+    perspective: 2000px;
+}
