started index about section

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -41,7 +41,8 @@ body {
 .main {
     display: grid;
     grid-template-rows: 1fr;
-    grid-gap: $gutter;
+    grid-gap: $gutter * 2;
+    margin: $gutter 0;
 
     perspective: 2000px;
 }
