--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -4,7 +4,7 @@
     padding: 3rem 0;
     position: relative;
 
-    margin: 12rem 0;
+    margin: 12rem 0 0 0;
 
     &--dark {
         background-color: $col-dark-2;
