--- a/src/scss/pages/_pg-index.scss
+++ b/src/scss/pages/_pg-index.scss
@@ -27,7 +27,7 @@
     &__about-icon-container {
         padding: 1.5rem;
         border-radius: 50%;
-        background-color: $col-primary-light;
+        background-color: $col-primary;
         margin-right: 2rem;
     }
 
