continued work on footer

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $col-light-4: rgba(255, 255, 255, 0.4);
 $col-dark-1: #101322;
 $col-dark-2: #0f1221;
 $col-dark-3: #5b5675;
+$col-dark-4: rgba(#101322, 0.6);
 
 $gutter: 3rem;
 
