--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .footer {
-    padding: $gutter * 1.5;
+    padding: $gutter * 1.5 $gutter * 1.5 0 $gutter * 1.5;
 
     background-color: $col-light-1;
     box-shadow: -10px -10px 40px 0 rgba(56, 50, 124, 0.38);
@@ -55,18 +55,24 @@
         grid-gap: 1.5rem;
 
         padding: $gutter;
-        border-radius: $radius;
+        border-radius: $radius * 2;
 
-        transition: 0.15s ease;
+        background-color: #fff;
+        box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+
+        transition: 0.2s ease;
 
         &:hover {
-            background-color: rgba($col-dark-2, 0.07);
+            background-color: $col-dark-2;
+            color: $col-light-2;
+            transform: translateY(-5px);
         }
     }
 
     &__link-icon {
         width: 2.4rem;
         height: 2.4rem;
+        fill: currentColor;
     }
 
     &__link-heading {
@@ -79,6 +85,10 @@
     &__link-text {
         font-size: 1.3rem;
         color: $col-dark-3;
+        transition: 0.2s ease;
+    }
+    &__link:hover &__link-text {
+        color: $col-light-4;
     }
 
     &__dummy-link {
@@ -90,15 +100,22 @@
         font-size: 1.1rem;
         margin-top: 1rem;
 
+        transition: 0.2s ease;
+
         svg {
             width: 0.8rem;
             margin-left: 0.5rem;
             transform: rotate(90deg);
+            fill: currentColor;
         }
     }
 
+    &__link:hover &__dummy-link {
+        color: $col-primary-light;
+    }
+
     &__lower {
-        padding: 1.5rem;
+        padding: 1.5rem 1.5rem 0 1.5rem;
 
         display: flex;
         flex-direction: column;
@@ -174,10 +191,21 @@
 
     &__social-list {
         display: flex;
+        justify-content: flex-end;
     }
 
     &__social-item {
         position: relative;
+        margin: 0 0.5rem;
+    }
+
+    &__lower-bottom {
+        padding: 3rem 0;
+
+        p {
+            font-size: 1.4rem;
+            color: $col-dark-3;
+        }
     }
 }
 
