--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,4 @@
 @use './components/jumbotron';
 @use './components/git-commit-graph';
 @use './components/single-input';
+@use './components/tooltip';
