--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,4 @@
 @use './components/git-commit-graph';
 @use './components/single-input';
 @use './components/tooltip';
+@use './components/technology';
