--- a/src/scss/components/_jumbotron.scss
+++ b/src/scss/components/_jumbotron.scss
@@ -22,7 +22,7 @@
 
     @include respond(1200) {
         width: calc(100vw - #{$gutter * 2});
-        margin: 0 auto;
+        margin: $gutter auto 0 auto;
     }
 
     &__main {
