--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,7 +4,13 @@
     padding: $gutter * 1.5 $gutter * 1.5 0 $gutter * 1.5;
 
     background-color: $col-light-1;
-    box-shadow: -10px -10px 40px 0 rgba(56, 50, 124, 0.38);
+
+    box-shadow: -10px -10px 40px 0 rgba(56, 50, 124, 0.1);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+    &--harsh-shadow {
+        box-shadow: -10px -10px 40px 0 rgba(56, 50, 124, 0.38);
+    }
 
     @include respond(992) {
         padding: $gutter;
