--- a/src/scss/abstracts/_normalize.scss
+++ b/src/scss/abstracts/_normalize.scss
@@ -91,8 +91,10 @@ p {
         color: $col-primary;
         font-weight: 600;
 
+        transition: color 0.1s ease;
+
         &:hover {
-            text-decoration: underline;
+            color: $col-primary-light;
         }
     }
 }
