--- a/src/scss/components/_blog-card.scss
+++ b/src/scss/components/_blog-card.scss
@@ -68,6 +68,10 @@
         letter-spacing: 1px;
     }
 
+    &--horizontal &__date {
+        font-size: 1.2rem;
+    }
+
     &__title {
         font-size: 2.2rem;
         font-weight: 700;
