--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -1,7 +1,7 @@
 @use '../abstracts' as *;
 
 .section {
-    padding: 3rem 0;
+    padding: 3rem 0 6rem 0;
     position: relative;
 
     &--wave {
