--- a/src/scss/components/_jumbotron.scss
+++ b/src/scss/components/_jumbotron.scss
@@ -123,6 +123,7 @@
         color: $col-light-2;
         font-size: 4.2rem;
         line-height: 1.1;
+        margin-bottom: 0;
 
         span {
             color: $col-primary-light;
