--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -18,7 +18,7 @@
 
         text-transform: uppercase;
         letter-spacing: 1px;
-        font-size: 1.2rem;
+        font-size: 12px;
 
         svg {
             color: rgba(0, 0, 0, 0.6);
@@ -33,6 +33,7 @@
         margin-right: 1.5rem;
         color: $col-primary;
         font-weight: 700;
+        font-size: 12px;
 
         &:hover {
             &,
