added updated api / dashboard

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 
 @use './pages/pg-index';
 @use './pages/pg-blog';
+@use './pages/pg-dashboard';
 
 @use './components/jumbotron';
 @use './components/git-commit-graph';
