--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -3,12 +3,21 @@
 .badge {
     color: #fff;
     background-color: $col-dark-1;
-    padding: 0.3rem 0.7rem;
-    border-radius: 0.2rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 0.4rem;
     display: inline-block;
 
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 1.1rem;
     font-weight: 700;
+
+    &--light {
+        background-color: #fff;
+        color: $col-primary;
+    }
+
+    &--shadow {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.07);
+    }
 }
