--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @use './pages/pg-index';
 @use './pages/pg-blog';
 @use './pages/pg-dashboard';
+@use './pages/pg-listening';
 
 @use './components/jumbotron';
 @use './components/git-commit-graph';
@@ -20,3 +21,5 @@
 @use './components/btn';
 @use './components/badge';
 @use './components/breadcrumbs';
+@use './components/play-button';
+@use './components/music-notes';
