--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,3 +23,5 @@
 @use './components/breadcrumbs';
 @use './components/play-button';
 @use './components/music-notes';
+@use './components/song-card';
+@use './components/heading-buttons';
