--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -26,6 +26,10 @@
         color: $col-dark-2;
     }
 
+    &--shadow {
+        box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.05);
+    }
+
     &__wave {
         position: absolute;
         bottom: 100%;
