--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,4 +24,6 @@
 @use './components/play-button';
 @use './components/music-notes';
 @use './components/song-card';
+@use './components/song-row';
 @use './components/heading-buttons';
+@use './components/square-graphic';
