--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -20,4 +20,6 @@ $gutter: 3rem;
 
 $radius: 0.3rem;
 
+$shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 $timing-function-elastic: cubic-bezier(0.34, 1.4, 0.64, 1);
