--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,11 +5,11 @@
 
     background-color: $col-light-1;
 
-    box-shadow: -10px -10px 40px 0 rgba(56, 50, 124, 0.1);
+    box-shadow: -10px -10px 30px 0 rgba(56, 50, 124, 0.05);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 
     &--harsh-shadow {
-        box-shadow: -10px -10px 40px 0 rgba(56, 50, 124, 0.38);
+        // box-shadow: 0 -5px 30px 0 rgba(56, 50, 124, 0.2);
     }
 
     @include respond(992) {
