--- a/src/scss/pages/_pg-listening.scss
+++ b/src/scss/pages/_pg-listening.scss
@@ -18,6 +18,7 @@
         display: block;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
         border-radius: 1rem;
+        width: 36rem;
     }
 
     &__header-main {
@@ -36,6 +37,51 @@
 
         color: $col-dark-3;
         font-size: 2rem;
+    }
+
+    &__header-footer {
+        display: flex;
+        align-items: center;
+        align-self: stretch;
+    }
+
+    &__header-timeline-container {
+        display: flex;
+        align-items: center;
+        flex: 1;
+        margin: 0 1.5rem;
+    }
+
+    &__header-timeline {
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 2px;
+        height: 0.5rem;
+        width: 100%;
+        flex: 1;
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__header-timeline-inner {
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: $col-primary;
+    }
+
+    &__header-timeline-time {
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: rgba(0, 0, 0, 0.6);
+
+        &:first-child {
+            margin-right: 1.5rem;
+        }
+
+        &:last-child {
+            margin-left: 1.5rem;
+        }
     }
 
     &__body {
