--- a/src/scss/components/_song-card.scss
+++ b/src/scss/components/_song-card.scss
@@ -9,10 +9,13 @@
         border-radius: $radius * 2;
         overflow: hidden;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        object-position: center;
     }
 
     &--rounded &__image-container {
-        border-radius: 3rem !important;
+        border-radius: 1.5rem !important;
     }
 
     &__image {
